@@ -1,27 +1,25 @@
 package edu.cs.tcu.chineselearningplatform.service;
 
-import static com.mongodb.internal.connection.tlschannel.util.Util.assertTrue;
-import static org.junit.Assert.assertEquals;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Optional;
-
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.Mock;
-import org.mockito.Mockito;
-import org.mockito.MockitoAnnotations;
-
 import edu.cs.tcu.chineselearningplatform.dao.SectionRepository;
 import edu.cs.tcu.chineselearningplatform.dao.UserRepository;
 import edu.cs.tcu.chineselearningplatform.entity.Section;
 import edu.cs.tcu.chineselearningplatform.entity.User;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
+
+import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
+
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 public class SectionServiceTest {
-    private SectionService sectionService;
 
     @Mock
     private SectionRepository sectionRepository;
@@ -32,126 +30,145 @@ public class SectionServiceTest {
     @Mock
     private UserService userService;
 
-    @Before
-    public void setUp() throws Exception {
-        MockitoAnnotations.initMocks(this);
-        sectionService = new SectionService(sectionRepository, userRepository, userService);
+    private SectionService sectionService;
+
+    @BeforeEach
+    public void setup() {
+        MockitoAnnotations.openMocks(this);
+        this.sectionService = new SectionService(sectionRepository, userRepository, userService);
     }
 
     @Test
     public void testFindById() {
-        // create a section object for testing
-        Section section = new Section();
-        section.setId("12345");
+        // Given
+        Section expectedSection = new Section();
+        expectedSection.setId("1");
+        expectedSection.setSection("Test Section");
 
-        // mock the sectionRepository.findById() method to return the section object when called with "12345" as argument
-        when(sectionRepository.findById("12345")).thenReturn(Optional.of(section));
+        given(sectionRepository.findById("1")).willReturn(Optional.of(expectedSection));
 
-        // call the sectionService.findById() method with "12345" as argument and store the result in a variable
-        Optional<Section> result = sectionService.findById("12345");
+        // When
+        Optional<Section> actualSection = sectionService.findById("1");
 
-        // check that the result is not null and has the correct id
-        assertEquals(true, result.isPresent());
-        assertEquals("12345", result.get().getId());
+        // Then
+        assertThat(actualSection.isPresent()).isTrue();
+        assertThat(actualSection.get().getId()).isEqualTo(expectedSection.getId());
+        assertThat(actualSection.get().getSection()).isEqualTo(expectedSection.getSection());
+        verify(sectionRepository, times(1)).findById("1");
     }
 
     @Test
     public void testFindStudents() {
-        // create a section object for testing
+        // Given
+        User student1 = new User();
+        student1.setId("1");
+        student1.setUsername("student1");
+
+        User student2 = new User();
+        student2.setId("2");
+        student2.setUsername("student2");
+
         Section section = new Section();
-        section.setId("12345");
+        section.setId("1");
+        section.setSection("Test Section");
+        section.setStudents(Arrays.asList(student1, student2));
 
-        // create two user objects for testing
-        User user1 = new User();
-        user1.setId("111");
-        User user2 = new User();
-        user2.setId("222");
+        given(sectionRepository.findById("1")).willReturn(Optional.of(section));
 
-        // add the user objects to the section's students list
-        List<User> students = new ArrayList<>();
-        students.add(user1);
-        students.add(user2);
-        section.setStudents(students);
+        // When
+        List<User> students = sectionService.findStudents("1");
 
-        // mock the sectionRepository.findById() method to return the section object when called with "12345" as argument
-        when(sectionRepository.findById("12345")).thenReturn(Optional.of(section));
-
-        // call the sectionService.findStudents() method with "12345" as argument and store the result in a variable
-        List<User> result = sectionService.findStudents("12345");
-
-        // check that the result is not null and contains the correct number of students
-        assertEquals(2, result.size());
-        // check that the result contains the correct students
-        assertEquals("111", result.get(0).getId());
-        assertEquals("222", result.get(1).getId());
+        // Then
+        assertThat(students).hasSize(2);
+        assertThat(students).contains(student1, student2);
+        verify(sectionRepository, times(1)).findById("1");
     }
 
-//    @Test
-//    public void testSave() {
-//        // create a section object for testing
-//        Section section = new Section();
-//        section.setId("12345");
-//
-//        // create a user object for testing
-//        User user = new User();
-//        user.setId("111");
-//
-//        // mock the userRepository.findAll() method to return a list containing the user object
-//        when(userRepository.findAll()).thenReturn(List.of(user));
-//
-//        // call the sectionService.save() method with the section object and store the result in a variable
-//        sectionService.save(section);
-//
-//        // check that the sectionRepository.save() method was called with the section object as argument
-//        Mockito.verify(sectionRepository).save(section);
-//    }
+    @Test
+    public void testSave() {
+        // Given
+        Section sectionToSave = new Section();
+        sectionToSave.setId("1");
+        sectionToSave.setSection("Test Section");
 
-//    @Test
-//    public void testFindByTeacher() {
-//        // create a section object for testing
-//        Section section = new Section();
-//        section.setId("12345");
-//
-//        // create a user object for testing
-//        User user = new User();
-//        user.setId("111");
-//        user.setRole("teacher");
-//        section.setInstructor(user);
-//
-//        when(sectionRepository.findByTeacher(user)).thenReturn(List.of(section));
-//
-//        // call the sectionService.findByTeacher() method with the user object as argument and store the result in a variable
-//        List<Section> result = sectionService.findByTeacher("teacher");
-//
-//        // check that the result is not null and contains the correct section
-//        assertEquals(1, result.size());
-//        assertEquals("12345", result.get(0).getId());
-//    }
+        User instructor = new User();
+        instructor.setId("1");
+        instructor.setUsername("test_instructor");
+
+        given(userRepository.findAll()).willReturn(Arrays.asList(instructor));
+        given(sectionRepository.save(sectionToSave)).willReturn(sectionToSave);
+
+        // When
+        sectionService.save(sectionToSave);
+
+        // Then
+        assertThat(sectionToSave.getInstructor()).isEqualTo(instructor);
+        assertThat(instructor.getSections()).contains(sectionToSave);
+        verify(userRepository, times(1)).findAll();
+        verify(sectionRepository, times(1)).save(sectionToSave);
+        verify(userService, times(1)).save(instructor);
+    }
+
+
+    @Test
+    public void testFindByTeacher() {
+        // Given
+        User teacher = new User();
+        teacher.setId("1");
+        teacher.setUsername("teacher1");
+
+        Section section1 = new Section();
+        section1.setId("1");
+        section1.setSection("Section 1");
+        section1.setInstructor(teacher);
+
+        Section section2 = new Section();
+        section2.setId("2");
+        section2.setSection("Section 2");
+        section2.setInstructor(teacher);
+
+        teacher.setSections(Arrays.asList(section1, section2));
+
+        given(userService.findByUsername("teacher1")).willReturn(teacher);
+
+        // When
+        List<Section> sections = sectionService.findByTeacher("teacher1");
+
+        // Then
+        assertThat(sections).hasSize(2);
+        assertThat(sections).contains(section1, section2);
+        verify(userService, times(1)).findByUsername("teacher1");
+    }
 
     @Test
     public void testAssignStudent() {
-        // create a section object for testing
+        // Given
+        User student = new User();
+        student.setId("1");
+        student.setUsername("student1");
+
         Section section = new Section();
-        section.setId("12345");
+        section.setId("1");
+        section.setSection("Section 1");
 
-        // create a user object for testing
-        User user = new User();
-        user.setId("111");
+        given(userRepository.findById("1")).willReturn(Optional.of(student));
+        given(sectionRepository.findById("1")).willReturn(Optional.of(section));
+        given(sectionRepository.save(section)).willReturn(section);
+        given(userRepository.save(student)).willReturn(student);
 
-        // mock the userRepository.findById() method to return the user object when called with "111" as argument
-        when(userRepository.findById("111")).thenReturn(Optional.of(user));
+        // When
+        sectionService.assignStudent("1", "1");
+        sectionService.assignStudent((section.getId()), student.getId());
+        System.out.println(student.getSections());
 
-        // mock the sectionRepository.findById() method to return the section object when called with "12345" as argument
-        when(sectionRepository.findById("12345")).thenReturn(Optional.of(section));
-
-        // call the sectionService.assignStudent() method with "12345" and "111" as arguments
-        sectionService.assignStudent("12345", "111");
-
-        // check that the user object was added to the section's students list
-        assertTrue(section.getStudents().contains(user));
-        // check that the sectionRepository.save() method was called
-        Mockito.verify(sectionRepository).save(section);
+        // Then
+        assertThat(section.getStudents()).hasSize(1);
+        assertThat(section.getStudents()).contains(student);
+        assertThat(student.getSections()).hasSize(1);
+        assertThat(student.getSections()).contains(section);
+        verify(userRepository, times(1)).findById("1");
+        verify(sectionRepository, times(1)).findById("1");
+        verify(sectionRepository, times(1)).save(section);
+        verify(userRepository, times(1)).save(student);
     }
 }
-
-
